--- a/Service/src/Dt.Core/Res/Admin.html
+++ b/Service/src/Dt.Core/Res/Admin.html
@@ -91,8 +91,8 @@
                 var xhr = new XMLHttpRequest();
                 xhr.responseType = "arraybuffer";
                 xhr.open("post", _rpcUrl, true);
-                xhr.setRequestHeader("sid", "b064966efb5044fcaf794f6c6aeadee0");
-                xhr.setRequestHeader("uname", "admin");
+                // 内部用户标识
+                xhr.setRequestHeader("uid", "1101");
                 xhr.onload = function ()
                 {
                     if (xhr.status == 200)
