--- a/Service/src/Dt.Pub/wwwroot/editor/readonly.html
+++ b/Service/src/Dt.Pub/wwwroot/editor/readonly.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>浏览</title>
     <link rel="stylesheet" href="../css/froala_editor.pkgd.min.css">
 </head>
