库初始化异常时恢复按钮状态

--- a/Service/src/Dt.Core/Res/Init.html
+++ b/Service/src/Dt.Core/Res/Init.html
@@ -261,6 +261,7 @@
                     else if (result[0] == 1)
                     {
                         alert(result[1]);
+                        toggleButton(false);
                     }
                     else
                     {
